# simbal

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  post_process.py
doc/: Doxyfile  doxygen-awesome-sidebar-only.css  doxygen-awesome.css
input/: mission.json
src/: CMakeLists.txt  eom.cpp  eom.hpp  hello.cpp  main.cpp  mission.cpp  mission.hpp  pointMass.cpp  pointMass.hpp
src/environment/: atmosisa.cpp  atmosisa.hpp  geodetic.cpp  geodetic.hpp
src/equations/: pointMass.cpp  pointMass.hpp
src/frames/: frames.cpp  frames.hpp
src/projectile/: projectile.cpp  projectile.hpp
src/utils/: logger.hpp
tests/: CMakeLists.txt  hello_test.cpp  test_atmosisa.cpp  test_frames.cpp  test_main.cpp
